--- a/components/home.html
+++ b/components/home.html
@@ -66,6 +66,9 @@
                                 <md-list-item ng-click="viewHistory()"><p>Storico</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
+                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="viewVersions()"><p>Versioni</p><img
+                                        src="../SMARTSTUDIO/img/icons/menu/history_icon_16.png" class="menu-list-icon"
+                                        alt=""></md-list-item>
                                 <md-list-item ng-click="changePassword()"><p>Cambia password</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/password_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
