--- a/components/indoor-alarms-info.html
+++ b/components/indoor-alarms-info.html
@@ -23,20 +23,56 @@
 <!--popup content-->
 <md-content class="popup-padding">
     <div layout="column" layout-align="center center">
-        <md-progress-circular ng-show="alarms.length === 0" md-diameter="100"
-                              md-mode="indeterminate"></md-progress-circular>
-        <md-list>
-            <md-divider></md-divider>
-            <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="loadLocation(alarm)">
-                <md-divider></md-divider>
-                <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{alarm.name}}"/>
-                <div class="md-list-item-text" layout="column">
-                    <h3>{{ alarm.tag }}</h3>
-                    <h4>{{ alarm.name }}</h4>
-                    <p>{{ alarm.description }}</p>
-                </div>
-            </md-list-item>
-        </md-list>
+
+        <md-table-container>
+
+            <table md-table md-row-select="options.rowSelection" ng-model="selected"
+                   md-progress="promise">
+
+                <thead md-head md-order="query.order">
+                <tr md-row>
+                    <th md-column><span class="color-darkcyan"></span></th>
+                    <th md-column><span class="color-darkcyan">TAG</span></th>
+                    <th md-column><span class="color-darkcyan">NOME</span></th>
+                    <th md-column><span class="color-darkcyan">DESCRIZIONE</span></th>
+                </tr>
+                </thead>
+
+                <tbody md-body>
+                <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
+                    ng-repeat="alarm in alarms | limitTo: query.limit: (query.page -1 ) * query.limit">
+                    <td md-cell><img ng-src="{{alarm.image}}" class="md-avatar" alt="{{alarm.name}}" title="alarm.name" />
+                    </td>
+                    <td md-cell class="no-wrap">{{alarm.tag}}</td>
+                    <td md-cell class="no-wrap" >{{alarm.name}}</td>
+                    <td md-cell class="no-wrap" >{{alarm.description}}</td>
+                    <td md-cell class="no-wrap" ><md-button ng-click="loadLocation(alarm)" class="md-raised background-darkcyan color-white">
+                        Apri sito
+                    </md-button></td>
+                </tr>
+                </tbody>
+            </table>
+        </md-table-container>
+
+        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
+                             md-page="query.page"
+                             md-total="{{alarms.length}}" md-on-paginate="getAnchors">
+        </md-table-pagination>
+
+        <!--<md-progress-circular ng-show="alarms.length === 0" md-diameter="100"-->
+                              <!--md-mode="indeterminate"></md-progress-circular>-->
+        <!--<md-list>-->
+            <!--<md-divider></md-divider>-->
+            <!--<md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="loadLocation(alarm)">-->
+                <!--<md-divider></md-divider>-->
+                <!--<img ng-src="{{alarm.image}}" class="md-avatar" alt="{{alarm.name}}"/>-->
+                <!--<div class="md-list-item-text" layout="column">-->
+                    <!--<h3>{{ alarm.tag }}</h3>-->
+                    <!--<h4>{{ alarm.name }}</h4>-->
+                    <!--<p>{{ alarm.description }}</p>-->
+                <!--</div>-->
+            <!--</md-list-item>-->
+        <!--</md-list>-->
     </div>
 </md-content>
 <!--end popup content-->
