--- a/components/search-tag-outside.html
+++ b/components/search-tag-outside.html
@@ -1,6 +1,6 @@
 <div>
     <!--popup header-->
-    <md-toolbar id="popup-toolbar">
+    <md-toolbar id="popup-toolbar" ng-class="isTagOutOfLocation">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
                 <img src="../SMARTSTUDIO/img/icons/close-icon.png" alt="Close" title="Close"/>
