--- a/components/canvas.html
+++ b/components/canvas.html
@@ -49,18 +49,18 @@
                              alt="Disegna riga inclinata" title="Disegna riga inclinata">
                     </md-button>
 
-                    <md-button aria-label="Disegna riga inclinata"
+                    <md-button aria-label="Cancella linea"
                                class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                ng-click="canvasCtrl.speedDialClicked('delete')">
                         <img src="../SMARTSTUDIO/img/icons/erase_24.png" class="width-100 height-100"
-                             alt="Disegna riga inclinata" title="Disegna riga inclinata">
+                             alt="Cancella linea" title="Cancella linea">
                     </md-button>
                     <div layout="column" class="width-20">
-                        <md-button aria-label="Disegna riga inclinata"
+                        <md-button aria-label="Riposiziona ancora"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('drop_anchor')">
                             <img src="../SMARTSTUDIO/img/icons/tags/anchor_online_24.png" class="width-100 height-100"
-                                 alt="Disegna riga inclinata" title="Disegna riga inclinata">
+                                 alt="Riposiziona ancora" title="Riposiziona ancora">
                         </md-button>
                     </div>
                 </md-fab-actions>
