--- a/components/insert-location.html
+++ b/components/insert-location.html
@@ -64,7 +64,7 @@
 
             <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
                 <input required type="number" ng-model="location.radius" name="locationRadius"
-                       placeholder="Radius">
+                       placeholder="Copertura in °">
                 <div ng-messages="insertLocationForm.locationRadius.$error || insertLocationForm.$submitted"
                      role="alert">
                     <div ng-message=" required">Inserire il raggio</div>
