--- a/components/canvas.html
+++ b/components/canvas.html
@@ -130,6 +130,9 @@
                                 <md-list-item ng-click="floorUpdate()"><p>Gestione piani</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/floor-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
+                                <md-list-item ng-click="zone()"><p>Gestione zone</p><img
+                                        src="../SMARTSTUDIO/img/icons/menu/floor-icon.png" class="menu-list-icon"
+                                        alt=""></md-list-item>
                                 <md-list-item ng-click="viewHistory()"><p>Storico</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
