--- a/components/home.html
+++ b/components/home.html
@@ -87,19 +87,37 @@
                                     </md-select>
                                 </md-input-container>
                             </div>
+                            <div layout="row" layout-align="center center" class="width-300-px">
 
-                            <div id="fullscreen-on-off-container" layout="column" class="padding-10-px width-100"
-                                 layout-align="center center">
+                                <!--<div id="sound-on-off-container" layout="column" class="padding-10-px width-50"-->
+                                     <!--layout-align="center center">-->
 
-                                <div flex="100" layout layout-align="center center">
-                                    <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b>
-                                    </md-subheader>
+                                    <!--<div flex="100" layout layout-align="center center">-->
+                                        <!--<md-subheader class="padding-0" ng-show="switch.playAudio">Audio: <b-->
+                                                <!--class="color-green">ON</b></md-subheader>-->
+                                        <!--<md-subheader class="padding-0" ng-show="!switch.playAudio">Audio:-->
+                                            <!--<b class="color-red">OFF</b></md-subheader>-->
+                                    <!--</div>-->
+
+                                    <!--<md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"-->
+                                               <!--md-no-ink aria-label="Attiva/disattiva audio"-->
+                                               <!--ng-model="switch.playAudio">-->
+                                    <!--</md-switch>-->
+                                <!--</div>-->
+
+                                <div id="fullscreen-on-off-container" layout="column" class="padding-10-px width-50"
+                                     layout-align="center center">
+
+                                    <div flex="100" layout layout-align="center center">
+                                        <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b>
+                                        </md-subheader>
+                                    </div>
+
+                                    <md-switch class="md-primary margin-none margin-top-10-px"
+                                               md-no-ink aria-label="Passsa in modalita' fullscreen"
+                                               ng-model="switch.mapFullscreen">
+                                    </md-switch>
                                 </div>
-
-                                <md-switch class="md-primary margin-none margin-top-10-px"
-                                           md-no-ink aria-label="Passsa in modalita' fullscreen"
-                                           ng-model="switch.mapFullscreen">
-                                </md-switch>
                             </div>
                         </div>
                     </md-content>
