--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,10 @@ md-progress-circular svg path { stroke: #E52846; }
     padding: 0!important;
 }
 
+#sound-on-off-container .md-subheader-inner{
+    padding: 0!important;
+}
+
 .md-confirm-button{
     background-color: #E12315!important;
     color: #ffffff!important;
